# ZeroFS

./: OSS_PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  cache_optimization_guide.md  optimized_oss_config.toml  test_performance_improvements.sh
.github/: .pjdfstest-nfs-exclude
.github/workflows/: kernel-compile-9p.yml  kernel-compile-nfs.yml  pjdfstest-9p.yml  pjdfstest.yml  release-pgo.yml  stress-ng.yml  xfstests-9p.yml  xfstests-nfs.yml  zfs-test.yml
documentation/: package-lock.json  package.json
documentation/src/app/configuration/: page.mdx
documentation/src/app/encryption/: page.mdx
documentation/src/components/: Guides.tsx
zerofs/: Cargo.toml  build.rs  example_oss_config.toml
zerofs/proto/: admin.proto
zerofs/src/: bucket_identity.rs  cache.rs  config.rs  encryption.rs  key_management.rs  main.rs  nfs.rs  parse_object_store.rs  posix_tests.rs  task.rs
zerofs/src/cli/: checkpoint.rs  debug.rs  fatrace.rs  mod.rs  password.rs  server.rs
zerofs/src/fs/: flush_coordinator.rs  gc.rs  inode.rs  key_codec.rs  metrics.rs  mod.rs  permissions.rs  stats.rs  tracing.rs  types.rs  write_coordinator.rs
zerofs/src/fs/store/: chunk.rs  directory.rs  inode.rs  mod.rs  tombstone.rs
zerofs/src/nbd/: error.rs  handler.rs  mod.rs  server.rs
zerofs/src/ninep/: errors.rs  handler.rs  lock_manager.rs  mod.rs  protocol.rs  server.rs
zerofs/src/rpc/: client.rs  convert.rs  mod.rs  server.rs
